chore: upgrade to Java 21
Closes: FST-88