@@ -25,7 +25,7 @@
   </licenses>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -35,7 +35,7 @@
 
     <spring-boot.version>3.4.2</spring-boot.version>
 
-    <folio-spring-base.version>8.3.0-SNAPSHOT</folio-spring-base.version>
+    <folio-spring-base.version>9.0.0-SNAPSHOT</folio-spring-base.version>
 
     <!-- Test dependencies versions -->
     <mockito.version>5.15.2</mockito.version>
@@ -146,10 +146,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
           <release>${java.version}</release>
           <encoding>UTF-8</encoding>
+          <compilerArgument>-proc:full</compilerArgument>
         </configuration>
       </plugin>
 
